--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,28 @@
             <version>1.8.7</version>
         </dependency>
 
+        <!--spring security  -->
+              <dependency>
+                  <groupId>org.springframework.security</groupId>
+                  <artifactId>spring-security-core</artifactId>
+                  <version>${spring.version}</version>
+              </dependency>
+                      <dependency>
+                  <groupId>org.springframework.security</groupId>
+                   <artifactId>spring-security-web</artifactId>
+                   <version>${spring.version}</version>
+               </dependency>
+                        <dependency>
+                   <groupId>org.springframework.security</groupId>
+                   <artifactId>spring-security-config</artifactId>
+                   <version>${spring.version}</version>
+               </dependency>
+               <dependency>
+                   <groupId>org.springframework.security</groupId>
+                   <artifactId>spring-security-taglibs</artifactId>
+                   <version>${spring.version}</version>
+               </dependency>
+
         <!--Spring数据库连接-->
         <dependency>
             <groupId>org.springframework</groupId>
